# bullseye_copilot_langgraph

./: .gitignore  README.md
backend/: .env.example  project_structure.md  pyproject.toml  requirements.txt  run.py
backend/src/bullseye_copilot/: __init__.py  main.py
backend/src/bullseye_copilot/api/v1/: router.py
backend/src/bullseye_copilot/api/v1/endpoints/: __init__.py  artifacts.py  auth.py  chat.py
backend/src/bullseye_copilot/api/v1/schemas/: __init__.py  auth.py  chat.py
backend/src/bullseye_copilot/core/: config.py  logging_config.py
backend/src/bullseye_copilot/llm/: __init__.py  models.py
backend/src/bullseye_copilot/llm/prompts/: loader.py
backend/src/bullseye_copilot/llm/workflows/: __init__.py
backend/src/bullseye_copilot/llm/workflows/copilot/: __init__.py  agent.py  middleware.py
backend/src/bullseye_copilot/llm/workflows/copilot/tools/: __init__.py  _shims.py  bash.py  bullseye_mcp.py  files.py  web.py
backend/src/bullseye_copilot/services/: __init__.py  bullseye_auth.py
backend/src/bullseye_copilot/utils/: __init__.py  streaming.py  usage.py  workspace.py
backend/tests/unit/: test_file_scope.py
bullseye-mcp/: .env.example  ARCHITECTURE.md  README.md  requirements.txt  server.py
bullseye-mcp/core/: __init__.py  annotations.py  app.py  helpers.py  session.py
docs/: langgraph-migration-plan.md
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  index.css  vite-env.d.ts
frontend/src/components/: Chat.tsx  (+2 more)
knowledge/help/: INDEX.md
prompts/: bullseye_copilot_system_prompt.md
(+111 files in other folders)
