[project]
name = "bullseye-copilot"
version = "0.1.0"
description = "Bullseye Copilot on LangGraph + LangChain v1 (FastAPI gateway)"
requires-python = ">=3.10"
dependencies = [
    "langchain>=1.0,<2.0",
    "langchain-core>=1.0,<2.0",
    "langgraph>=1.0,<2.0",
    "langchain-anthropic>=1.0,<2.0",
    "langchain-openai>=1.0,<2.0",
    "langchain-mcp-adapters>=0.1.0",
    "langsmith>=0.3.0",
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "httpx>=0.27",
    "python-dotenv>=1.0",
    "pydantic>=2.7",
]

[project.optional-dependencies]
search = ["langchain-tavily>=0.1"]
persist = ["langgraph-checkpoint-sqlite>=2.0"]
dev = ["pytest>=8.0"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/bullseye_copilot"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
